@@ -18,6 +18,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #21552: Fixed possible integer overflow of too long string lengths in
+  the tkinter module on 64-bit platforms.
+
 - Issue #14315: The zipfile module now ignores extra fields in the central
   directory that are too short to be parsed instead of letting a struct.unpack
   error bubble up as this "bad data" appears in many real world zip files in
